# python-project-174

./: README.md  pyproject.toml
.github/workflows/: ci.yml
gendiff/: __init__.py  diff_builder.py  generate_diff.py  parser.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: expected_json.txt  file1_nested.json  file1_nested.yml  file2_nested.json  file2_nested.yml
