[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["jcastiblanco <castiblanco.jeisson@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
