[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = [
    {name = "jcastiblanco", email = "castiblanco.jeisson@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "gendiff" }
]
[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.12.8"
coverage = "^7.10.3"
coverage-lcov = "^0.3.0"

[tool.ruff]
line-length = 88
select = ["E", "F"]


